# DMS

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  TODOS.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  build.gradle.kts  gradlew  pyproject.toml  settings.gradle.kts
backend/alembic/: env.py
backend/alembic/versions/: 0001_audit_logs.py  0002_master.py  0004_numbering.py  0006_documents.py  0007_approvals.py  0008_search_indexes.py  0009_fix_doc_number_unique.py  a3b3f96390a5_add_fk_indexes.py  c4fe0396e711_templates_table.py
backend/app/: config.py  db.py  deps.py  exceptions.py  main.py
backend/app/audit/: log.py
backend/app/auth/: api.py  ldap.py  session.py
backend/app/documents/: lineage_api.py  list_api.py  search_api.py  submit_api.py  template_validator.py
backend/app/master/: document_types_api.py  organizations_api.py  projects_api.py  templates_api.py  users_api.py
backend/app/models/: approval.py  audit_log.py  document.py  master.py  numbering.py
backend/app/notifications/: smtp.py
backend/app/numbering/: service.py
backend/app/pdf/: converter.py  stamp.py
backend/app/printing/: api.py
backend/app/storage/: minio_client.py
backend/app/workflow/: engine.py  inbox_api.py
backend/scripts/: seed_pilot.py
backend/tests/: conftest.py  test_audit_log_model.py  test_auth.py  test_converter.py  test_finalize.py  test_lineage.py  test_log_action.py  test_master.py  test_notifications.py  test_numbering.py  test_printing.py  test_search.py  test_stamp.py  test_submit.py  test_templates.py  test_workflow.py
backend/tests/e2e/: test_pilot_scenario.py
(+643 files in other folders)
