[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "accounts*", "audit*", "documents*", "approvals*", "pdfs*", "viewer*"]

[project]
name = "edms-v1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0,<6.0",
  "psycopg[binary]>=3.1,<4.0",
  "pypdf>=4.0,<6.0",
  "python-dotenv>=1.0,<2.0",
  "docxtpl>=0.16,<0.20",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "pytest-django>=4.8,<5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
