[project]
name = "dms-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.2",
  "ldap3>=2.9",
  "PyJWT>=2.8",
  "python-multipart>=0.0.9",
  "python-docx>=1.1",
  "lxml>=5.0",
  "minio>=7.2",
  "reportlab>=4.1",
  "pypdf>=4.1",
  "aiosmtplib>=3.0",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "freezegun>=1.4",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration (deselect with '-m not integration')",
  "e2e: marks tests as end-to-end",
]
